--- a/src/mytunes/gui/MainWindow.fxml
+++ b/src/mytunes/gui/MainWindow.fxml
@@ -10,18 +10,21 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="596.0" prefWidth="764.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mytunes.gui.MainWindowController">
+<AnchorPane id="AnchorPane" prefHeight="596.0" prefWidth="823.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mytunes.gui.MainWindowController">
    <children>
       <TableView layoutX="30.0" layoutY="135.0" prefHeight="377.0" prefWidth="219.0">
         <columns>
-          <TableColumn prefWidth="70.0" text="C1" />
-          <TableColumn prefWidth="77.0" text="C2" />
+          <TableColumn prefWidth="77.0" text="Songs" />
+          <TableColumn prefWidth="70.0" text="Name" />
+            <TableColumn prefWidth="75.0" text="Time" />
         </columns>
       </TableView>
-      <TableView layoutX="466.0" layoutY="135.0" prefHeight="377.0" prefWidth="282.0">
+      <TableView layoutX="466.0" layoutY="135.0" prefHeight="377.0" prefWidth="339.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="C1" />
-          <TableColumn prefWidth="75.0" text="C2" />
+          <TableColumn prefWidth="109.0" text="Title" />
+          <TableColumn prefWidth="104.0" text="Aritst" />
+            <TableColumn prefWidth="78.0" text="Category" />
+            <TableColumn prefWidth="47.0" text="Time" />
         </columns>
       </TableView>
       <ListView layoutX="258.0" layoutY="135.0" prefHeight="377.0" prefWidth="149.0" />
