--- a/src/mytunes/gui/Songtable.fxml
+++ b/src/mytunes/gui/Songtable.fxml
@@ -2,11 +2,12 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="292.0" prefWidth="347.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.1" fx:controller="mytunes.gui.SongtableController">
+<AnchorPane id="AnchorPane" prefHeight="292.0" prefWidth="347.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mytunes.gui.SongtableController">
    <children>
       <Label layoutX="66.0" layoutY="29.0" text="Title:" />
       <Label layoutX="61.0" layoutY="69.0" text="Artist:" />
@@ -17,9 +18,14 @@
       <TextField layoutX="97.0" layoutY="65.0" />
       <TextField layoutX="97.0" layoutY="151.0" prefHeight="25.0" prefWidth="87.0" />
       <TextField layoutX="97.0" layoutY="195.0" />
-      <TextField layoutX="97.0" layoutY="110.0" prefHeight="25.0" prefWidth="87.0" />
       <Button layoutX="258.0" layoutY="196.0" mnemonicParsing="false" text="Choose" />
       <Button layoutX="273.0" layoutY="248.0" mnemonicParsing="false" text="Save" />
       <Button layoutX="206.0" layoutY="248.0" mnemonicParsing="false" text="Cancel" />
+      <MenuButton layoutX="97.0" layoutY="110.0" mnemonicParsing="false" text="MenuButton">
+        <items>
+          <MenuItem mnemonicParsing="false" text="Action 1" />
+          <MenuItem mnemonicParsing="false" text="Action 2" />
+        </items>
+      </MenuButton>
    </children>
 </AnchorPane>
