--- a/src/mytunes/gui/Songtable.fxml
+++ b/src/mytunes/gui/Songtable.fxml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
@@ -21,11 +20,6 @@
       <Button layoutX="258.0" layoutY="196.0" mnemonicParsing="false" text="Choose" />
       <Button layoutX="273.0" layoutY="248.0" mnemonicParsing="false" text="Save" />
       <Button layoutX="206.0" layoutY="248.0" mnemonicParsing="false" text="Cancel" />
-      <MenuButton layoutX="97.0" layoutY="110.0" mnemonicParsing="false" text="MenuButton">
-        <items>
-          <MenuItem mnemonicParsing="false" text="Action 1" />
-          <MenuItem mnemonicParsing="false" text="Action 2" />
-        </items>
-      </MenuButton>
+      <ComboBox layoutX="99.0" layoutY="110.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
