--- a/src/mytunes/gui/Songtable.fxml
+++ b/src/mytunes/gui/Songtable.fxml
@@ -13,13 +13,13 @@
       <Label layoutX="41.0" layoutY="114.0" text="Category:" />
       <Label layoutX="62.0" layoutY="155.0" text="Time:" />
       <Label layoutX="66.0" layoutY="200.0" text="File:" />
-      <TextField layoutX="97.0" layoutY="25.0" />
-      <TextField layoutX="97.0" layoutY="65.0" />
-      <TextField layoutX="97.0" layoutY="151.0" prefHeight="25.0" prefWidth="87.0" />
-      <TextField layoutX="97.0" layoutY="195.0" />
-      <Button layoutX="258.0" layoutY="196.0" mnemonicParsing="false" text="Choose" />
-      <Button layoutX="273.0" layoutY="248.0" mnemonicParsing="false" text="Save" />
-      <Button layoutX="206.0" layoutY="248.0" mnemonicParsing="false" text="Cancel" />
-      <ComboBox layoutX="99.0" layoutY="110.0" prefWidth="150.0" />
+      <TextField fx:id="txtfieldtitle" layoutX="97.0" layoutY="25.0" />
+      <TextField fx:id="txtfieldartist" layoutX="97.0" layoutY="65.0" />
+      <TextField fx:id="txtfieldtime" layoutX="97.0" layoutY="151.0" prefHeight="25.0" prefWidth="87.0" />
+      <TextField fx:id="txtfieldfile" layoutX="97.0" layoutY="195.0" />
+      <Button layoutX="258.0" layoutY="196.0" mnemonicParsing="false" onAction="#buttonchoose" text="Choose" />
+      <Button layoutX="273.0" layoutY="248.0" mnemonicParsing="false" onAction="#buttonsave" text="Save" />
+      <Button layoutX="206.0" layoutY="248.0" mnemonicParsing="false" onAction="#bouttoncancel" text="Cancel" />
+      <ComboBox layoutX="99.0" layoutY="110.0" onAction="#musiccategory" prefWidth="150.0" />
    </children>
 </AnchorPane>
