--- a/src/mytunes/gui/PlayListEdit.fxml
+++ b/src/mytunes/gui/PlayListEdit.fxml
@@ -5,12 +5,11 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="131.0" prefWidth="366.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="mytunes.gui.PlayListEditController">
+<AnchorPane id="AnchorPane" prefHeight="145.0" prefWidth="353.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mytunes.gui.PlayListEditController">
    <children>
-      <Label layoutX="52.0" layoutY="53.0" text="Name:" />
-      <TextField fx:id="txtfieldname" layoutX="93.0" layoutY="49.0" prefHeight="25.0" prefWidth="231.0" />
-      <Button layoutX="283.0" layoutY="87.0" mnemonicParsing="false" onAction="#buttonsave" text="Save" />
-      <Button layoutX="209.0" layoutY="87.0" mnemonicParsing="false" onAction="#butotncancel" text="Cancel" />
+      <Label layoutX="42.0" layoutY="43.0" text="Name:" />
+      <TextField fx:id="txtfieldname" layoutX="83.0" layoutY="39.0" prefHeight="25.0" prefWidth="231.0" />
+      <Button layoutX="273.0" layoutY="77.0" mnemonicParsing="false" onAction="#buttonsave" text="Save" />
+      <Button layoutX="199.0" layoutY="77.0" mnemonicParsing="false" onAction="#butotncancel" text="Cancel" />
    </children>
 </AnchorPane>
