--- a/src/mytunes/gui/Songtable.fxml
+++ b/src/mytunes/gui/Songtable.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="292.0" prefWidth="347.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mytunes.gui.SongtableController">
+<AnchorPane id="AnchorPane" prefHeight="292.0" prefWidth="347.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mytunes.gui.SongtableController">
    <children>
       <Label layoutX="66.0" layoutY="29.0" text="Title:" />
       <Label layoutX="61.0" layoutY="69.0" text="Artist:" />
@@ -20,6 +20,6 @@
       <Button layoutX="258.0" layoutY="196.0" mnemonicParsing="false" onAction="#buttonchoose" text="Choose" />
       <Button layoutX="273.0" layoutY="248.0" mnemonicParsing="false" onAction="#buttonsave" text="Save" />
       <Button layoutX="206.0" layoutY="248.0" mnemonicParsing="false" onAction="#bouttoncancel" text="Cancel" />
-      <ComboBox fx:id="comboCategory" layoutX="99.0" layoutY="110.0" onAction="#musiccategory" prefWidth="150.0" />
+      <ComboBox fx:id="comboCategory" layoutX="99.0" layoutY="110.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
